<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Microblog</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world</string>
    <string name="background">选择背景</string>
    <string name="head">选择头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="focus_number">关注数</string>
    <string name="fans_number">粉丝数</string>
    <string name="introduction">简介</string>
    <string name="mailbox">邮箱</string>
    <string name="microblog">微博</string>
    <string name="write_mocroblog">写微博</string>
    <string name="friends_list">好友列表</string>
    <string name="more_information">详细资料</string>
    <string name="focus">关注</string>
    <string name="fans">粉丝</string>
    <string name="more">更多</string>
    <string name="ok">确定</string>
    <string name="add">+</string>
    <string name="title_activity_page_show">个人主页</string>
    <string name="title_activity_page_input">我的微博</string>
    <string name="introduction2">简介：</string>
    <string name="initial_introduction">初始简介内容</string>
    <string name="initial_nickname">初始昵称</string>
    <string name="input_account">请输入帐号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_more_information">MoreInformationActivity</string>
    <string name="login_name">登录名</string>
    <string name="age">年龄</string>
    <string name="nation">国籍</string>
    <string name="title_activity_focus">FocusActivity</string>
    <string name="title_activity_fans">FansActivity</string>
    <string name="focused">已关注</string>
    <string name="title_activity_write_blog">WriteBlogActivity</string>
    <string name="cancel">取消</string>
    <string name="send_microblog">发微博</string>
    <string name="send">发送</string>
    <string name="share_news">分享新鲜事</string>
    <string name="at">at</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="set_nation">选择国家（中国0,美国1)</string>
    <string name="set_account">请输入你的手机号</string>
    <string name="set_password">请设置密码</string>
    <string name="twice_password">再次输入密码</string>
    <string name="edit">编 辑</string>
    <string name="title_activity_microblog">MicroblogActivity</string>
    <string name="all_microblog">全部微博</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="manage_account">管理帐号</string>
    <string name="search_friend">查找好友</string>
    <string name="input_friend">请输入查找帐号</string>

</resources>
