<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_send"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#dcdcdc"
        android:padding="5dp">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@drawable/shape5"
			android:layout_alignParentLeft="true"
			android:text="@string/cancel"
			android:textSize="15sp"/>
        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/send_microblog"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/btn_send"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:text="@string/send"
            android:background="@drawable/shape6"
            android:textSize="15sp"/>    
                
    </RelativeLayout>
    <EditText 
        android:id="@+id/text_microblog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_news"
        android:padding="5dp"
        android:layout_below="@id/layout_send"/>
    <RelativeLayout
        android:id="@+id/layout_image"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="#778899">
        <ImageButton
            android:id="@+id/ibtn_camera" 
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="#00ffffff"
            android:src="@drawable/camera"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"/>
        <ImageButton 
            android:id="@+id/ibtn_photo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true" 
            android:background="#00ffffff"
            android:src="@drawable/photo"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"/>
        <Button 
            android:id="@+id/btn_at"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:background="#00ffffff"
            android:text="@string/at"
            android:textColor="#ffffff"
            android:scaleType="fitXY"/> 
    </RelativeLayout>

</RelativeLayout>