<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/et_account"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:background="#00ffffff"
                android:hint="@string/input_account"
                android:inputType="number"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/btn_more_pop"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@drawable/arrow" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="#dcdcdc" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape2"
        android:text="@string/register" /> 

    
</RelativeLayout>